Updating the bio stament to have strong and emphsised text

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
  <h1>Fitsum Alemu</h1>
  <h3>Lecurer , Addis Ababa institue of Technology</h3>   
  <p>Hi there , </p>
- <p>I am Fitsum , i am expert Java Developer who has been working on Java since 5 years. I am passionate about working in diffrent types of porgaming langiage </p>
-<hr>
+ <p>I am Fitsum , i am expert <strong>Java</strong> Developer who has been working on Java since <em>5 </em></em5>years. I am passionate about working in diffrent types of porgaming langiage </p>
+<hr>   
+<h3>Educational Backgroung</h3>
 
 </body>
 </html>
