--- a/index.html
+++ b/index.html
@@ -15,11 +15,23 @@
   Lets use the heading tage and paragraph tag with some bold and italic staments to achive that ...
 -->
 <!-- addong image of your porfile .. -->
- <img src="./assets/images/Tim.png" alt="Fitsum Alemu Profile Image">
- <h1>Fitsum Alemu</h1>
- <h3>Lecurer , Addis Ababa institue of Technology</h3>   
- <p>Hi there , </p>
- <p>I am Fitsum , i am expert <strong>Java</strong> Developer who has been working on Java since <em>5 </em></em5>years. I am passionate about working in diffrent types of porgaming langiage </p>
+<table cellspacing="10">
+    <tr>
+        <td>
+            <img src="./assets/images/Tim.png"  border="1"  alt="Fitsum Alemu Profile Image">
+        </td>
+        <td>
+            <h1>Fitsum Alemu</h1>
+            <h3>Lecurer , Addis Ababa institue of Technology</h3>   
+            <p>Hi there , </p>
+            <p>I am Fitsum , i am expert <strong>Java</strong> Developer who has been working on Java since <em>5 </em></em5>years. I am passionate about working in diffrent types of porgaming langiage </p>
+           
+
+        </td>
+    </tr>
+</table> 
+
+
 <hr>   
 <!-- This is to show some list of hobbies and interst 
 This is achived by Unorderd and Orderd List 
@@ -48,5 +60,22 @@ This is achived by Unorderd and Orderd List
         </ul>
     </li>
 </ul>
+<!-- Adding List of Skill with the star showing the skill level
+
+This is achived by table 
+-->
+<!-- First add the hr  -->
+<hr>   
+<h3>Skills</h3>      
+<table cellspacing="10">
+    <tr>
+     <td>Java for Web and Mobile </td>
+     <td>⭐️⭐️⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
+        <td>HTML, CSS and Javascript</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+    </tr>
+</table>
 </body>
 </html>
