--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   Lets use the heading tage and paragraph tag with some bold and italic staments to achive that ...
 -->
 <!-- addong image of your porfile .. -->
+<!-- Updating the heading with table -->
 <table cellspacing="10">
     <tr>
         <td>
@@ -66,7 +67,23 @@ This is achived by table
 -->
 <!-- First add the hr  -->
 <hr>   
-<h3>Skills</h3>      
+<h3>Work Experiance</h3>
+<table cellspacing="20">
+    <tr>
+        <th>Dates</th>
+        <th>Job</th>
+    </tr>
+    <tr>
+        <td>2005 - 2008</td>
+        <td>Web Develope at INSA</td>
+    </tr>
+    <tr>
+        <td>2008 - 2020</td>
+        <td>Lecturer at AAiT</td>
+    </tr>
+</table>
+<hr>
+<h3>Top Skills</h3>      
 <table cellspacing="10">
     <tr>
      <td>Java for Web and Mobile </td>
