--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+<!-- Adding Naviagtion .. -->
+<hr>
+<a href="index.html">Home</a>
+<a href="contact.html">Contact</a>
+<hr>
+
+
  <!-- Let start from the Head Part ... -->
  <!-- It will contain 
   1. Name 
