--- a/contact.html
+++ b/contact.html
@@ -38,14 +38,24 @@
         </td>
     </tr>
 </table> 
-
-
 <hr>   
-<!-- This is to show some list of hobbies and interst 
-This is achived by Unorderd and Orderd List 
-
--->
 <h3>Contact Me With the following Information</h3>
+<form action="mailto:fitsum@gmail.com" method="POST" enctype="utf-8">
+    
+<label for="name">First Name: </label>
+    <input type="text" name="fName" id="fName" required><br>
+    <label for="name">Last Name: </label>
+    <input type="text" name="lName" id="fName" required><br>
+<label for="email">Email: </label>
+<input type="email" name="email" id="email" required><br>
+Leave Your Comment here ..<br>
+<textarea name="comment" id="comment" cols="30" rows="10"></textarea>
+<br>
+<input type="submit" value="Submit">
+</form>
+
+
+
 
 </table>
 </body>
