--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fitsum Alemu</title>
 </head>
 <body>
 <!-- Adding Naviagtion .. -->
@@ -48,6 +48,15 @@
     <input type="text" name="lName" id="fName" required><br>
 <label for="email">Email: </label>
 <input type="email" name="email" id="email" required><br>
+<label for="co">Where Do You Live</label>
+<select name="co" id="co">
+  <option value="asia">Asia</option>
+  <option value="africa">Africa</option>
+  <option value="europe">Europe</option>
+  <option value="amarica">America</option>
+
+</select>
+<br>
 Leave Your Comment here ..<br>
 <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
 <br>
