Key Features : 1. Adding Footer with the Developed year using HTML entities

--- a/contact.html
+++ b/contact.html
@@ -62,10 +62,9 @@ Leave Your Comment here ..<br>
 <br>
 <input type="submit" value="Submit">
 </form>
-
-
-
-
 </table>
+<hr>
+<p align="center">Developed By Fitsum A. &copy;2020</p> 
+<hr>
 </body>
 </html>
