--- a/index.html
+++ b/index.html
@@ -101,5 +101,8 @@ This is achived by table
         <td>⭐️⭐️⭐️⭐️⭐️</td>
     </tr>
 </table>
+<hr>
+<p align="center">Developed By Fitsum A. &copy;2020</p> 
+<hr>
 </body>
 </html>
