--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,13 @@
 <h3>Contact Me With the following Information</h3>
 <form action="mailto:fitsum@gmail.com" method="POST" enctype="utf-8">
     
-<label for="name">First Name: </label>
-    <input type="text" name="fName" id="fName" required><br>
-    <label for="name">Last Name: </label>
-    <input type="text" name="lName" id="fName" required><br>
-<label for="email">Email: </label>
-<input type="email" name="email" id="email" required><br>
-<label for="co">Where Do You Live</label>
+<label for="name">First Name: </label>&nbsp;&nbsp;&nbsp;
+    <input type="text" name="fName" id="fName" required><br><br>
+    <label for="name">Last Name: </label>&nbsp;&nbsp;&nbsp;
+    <input type="text" name="lName" id="fName" required><br><br>
+<label for="email">Email: </label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<input type="email" name="email" id="email" required><br><br>
+<label for="co">Where Do You Live</label>&nbsp;&nbsp;&nbsp;
 <select name="co" id="co">
   <option value="asia">Asia</option>
   <option value="africa">Africa</option>
@@ -56,7 +56,7 @@
   <option value="amarica">America</option>
 
 </select>
-<br>
+<br><br>
 Leave Your Comment here ..<br>
 <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
 <br>
