Changing the size of image by using width and hight attribute since it is so big in the original format

--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
 <!-- Updating the heading with table -->
 <table cellspacing="10">
     <tr>
-        <td>
-            <img src="./assets/images/profile.png"    alt="Fitsum Alemu Profile Image">
+        <td> 
+            <img src="./assets/images/profile.png"    alt="Fitsum Alemu Profile Image" width="200" hight= "200">
         </td>
         <td>
             <h1>Fitsum Alemu</h1>
