--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <table cellspacing="10">
     <tr>
         <td>
-            <img src="./assets/images/profile.png"    alt="Fitsum Alemu Profile Image">
+            <img src="./assets/images/profile.png"    alt="Fitsum Alemu Profile Image" width="200" hight= "200">
         </td>
         <td>
             <h1>Fitsum Alemu</h1>
