--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>Fitsum Alemu</h1>
             <h3>Lecurer , Addis Ababa institue of Technology</h3>   
             <p>Hi there , </p>
-            <p>I am Fitsum , i am expert <strong>Java</strong> Developer who has been working on HTML. CSS and Javascript since <em>5 </em></em5>years. I am passionate about working in diffrent types of porgaming languages </p>
+            <p>I am Fitsum , i am expert <strong>Web</strong> Developer who has been working on HTML. CSS and Javascript since <em>5 </em></em5>years. I am passionate about working in diffrent types of porgaming languages </p>
            
 
         </td>
