--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <!-- Adding Naviagtion .. -->
 <hr>
-<a href="index.html">Home</a>
+<a href="index.html">Home</a> |
 <a href="contact.html">Contact</a>
 <hr>
 
