--- a/blog.html
+++ b/blog.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Fitsum A. / Blog</title>
 </head>
 <body>
-    
+<header>
+    <nav>
+     <ul>
+         <li> 
+             <a href="index.html">Home</a>
+         </li>
+         <li> 
+              <a href="blog.html">Blog</a>
+        </li>
+         <li>
+             <a href="contact.html">Contact</a>
+        </li>
+     </ul>
+    </nav>
+</header>
+
+
+   
 </body>
 </html>
