Key Features : 1. Adding a blog with HTML5 semantic elements 2. Applying font style in the blog

--- a/blog.html
+++ b/blog.html
@@ -22,8 +22,46 @@
      </ul>
     </nav>
 </header>
+<!-- Aading the Article  -->
+<div id="content">
+
+<section>
+<p class="title">
+My First Post
+</p>
+<article>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, laboriosam quis. Officiis veritatis, similique non placeat pariatur doloremque esse, numquam, mollitia debitis rem vel!
+Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis itaque iure reiciendis hic dicta sint repellendus, voluptatum vitae. Impedit cumque laborum eius enim, autem illo eos corrupti. Assumenda, repudiandae perferendis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, quos dicta. Error facilis cupiditate culpa numquam dolorum similique vitae neque blanditiis beatae vero perferendis, delectus velit natus quo facere in!
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, officiis ducimus? Voluptates, voluptatem quod dolorum commodi repellat eius optio amet ducimus accusamus sequi architecto illo sunt ipsam id placeat blanditiis!
+</article>
+<p class="date">
+March 7 2020 : 1:00 pm
+</p>
+</section>
+<!-- Second article  -->
+
+<section>
+    <p class="title">
+    My Second Post
+    </p>
+    <article>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, laboriosam quis. Officiis veritatis, similique non placeat pariatur doloremque esse, numquam, mollitia debitis rem vel!
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis itaque iure reiciendis hic dicta sint repellendus, voluptatum vitae. Impedit cumque laborum eius enim, autem illo eos corrupti. Assumenda, repudiandae perferendis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, quos dicta. Error facilis cupiditate culpa numquam dolorum similique vitae neque blanditiis beatae vero perferendis, delectus velit natus quo facere in!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, officiis ducimus? Voluptates, voluptatem quod dolorum commodi repellat eius optio amet ducimus accusamus sequi architecto illo sunt ipsam id placeat blanditiis!
+    </article>
+    <p class="date">
+    March 7 2020 : 2:00 pm
+    </p>
 
 
-   
+</section>
+</div>
+
+
+
+
+
 </body>
 </html>
