Adding third post and applying fixed property on the navigation

--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, officiis d
 March 7 2020 : 1:00 pm
 </p>
 </section>
+
 <!-- Second article  -->
 
 <section>
@@ -53,6 +54,26 @@ March 7 2020 : 1:00 pm
     </article>
     <p class="date">
     March 7 2020 : 2:00 pm
+    </p>
+
+
+</section>
+</div>
+
+<!-- Third article  -->
+
+<section>
+    <p class="title">
+    My Third Post
+    </p>
+    <article>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, laboriosam quis. Officiis veritatis, similique non placeat pariatur doloremque esse, numquam, mollitia debitis rem vel!
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis itaque iure reiciendis hic dicta sint repellendus, voluptatum vitae. Impedit cumque laborum eius enim, autem illo eos corrupti. Assumenda, repudiandae perferendis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, quos dicta. Error facilis cupiditate culpa numquam dolorum similique vitae neque blanditiis beatae vero perferendis, delectus velit natus quo facere in!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, officiis ducimus? Voluptates, voluptatem quod dolorum commodi repellat eius optio amet ducimus accusamus sequi architecto illo sunt ipsam id placeat blanditiis!
+    </article>
+    <p class="date">
+    March 7 2020 : 3:00 pm
     </p>
 
 
