--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Fitsum A. / Contact</title>
 </head>
 <body>
 <!-- Adding Naviagtion .. -->
@@ -23,21 +24,13 @@
 -->
 <!-- addong image of your porfile .. -->
 <!-- Updating the heading with table -->
-<table cellspacing="10">
-    <tr>
-        <td>
-            <img src="./assets/images/Tim.png"  border="1"  alt="Fitsum Alemu Profile Image">
-        </td>
-        <td>
-            <h1>Fitsum Alemu</h1>
-            <h3>Lecurer , Addis Ababa institue of Technology</h3>   
-            <p>Hi there , </p>
-            <p>I am Fitsum , i am expert <strong>Java</strong> Developer who has been working on Java since <em>5 </em></em5>years. I am passionate about working in diffrent types of porgaming langiage </p>
-           
 
-        </td>
-    </tr>
-</table> 
+<img src="./assets/images/Tim.png"  border="1"  alt="Fitsum Alemu Profile Image">
+<h1>Fitsum Alemu</h1>
+<h3>Lecurer , Addis Ababa institue of Technology</h3>   
+<p>Hi there , </p>
+<p>I am Fitsum , i am expert <strong>Java</strong> Developer who has been working on Java since <em>5 </em></em5>years. I am passionate about working in diffrent types of porgaming langiage </p>
+<div id="clear"></div>
 <hr>   
 <h3>Contact Me With the following Information</h3>
 <form action="mailto:fitsum@gmail.com" method="POST" enctype="utf-8">
