Misslinious changes on the form and contact.html

--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,21 @@
 </head>
 <body>
 <!-- Adding Naviagtion .. -->
-<hr>
-<a href="index.html">Home</a>
-<a href="contact.html">Contact</a>
-<hr>
+<header>
+    <nav>
+     <ul>
+         <li> 
+             <a href="index.html">Home</a>
+         </li>
+         <li> 
+              <a href="blog.html">Blog</a>
+        </li>
+         <li>
+             <a href="contact.html">Contact</a>
+        </li>
+     </ul>
+    </nav>
+</header>
 
 
  <!-- Let start from the Head Part ... -->
@@ -33,6 +44,8 @@
 <div id="clear"></div>
 <hr>   
 <h3>Contact Me With the following Information</h3>
+
+<div id="comment">
 <form action="mailto:fitsum@gmail.com" method="POST" enctype="utf-8">
     
 <label for="name">First Name: </label>
@@ -47,7 +60,7 @@ Leave Your Comment here ..<br>
 <input type="submit" value="Submit">
 </form>
 
-
+</div>
 
 
 </table>
