--- a/index.html
+++ b/index.html
@@ -3,41 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitsum Alemu</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Fitsum Alemu / Home</title>
 </head>
 <body>
 <!-- Adding Naviagtion .. -->
-<hr>
-<a href="index.html">Home</a> |
-<a href="contact.html">Contact</a>
-<hr>
+<!-- Adding Naviagtion .. -->
+<header>
+    <nav>
+     <ul>
+         <li> 
+             <a href="index.html">Home</a>
+         </li>
+         <li> 
+              <a href="blog.html">Blog</a>
+        </li>
+         <li>
+             <a href="contact.html">Contact</a>
+        </li>
+     </ul>
+    </nav>
+</header>
+    
 
-
- <!-- Let start from the Head Part ... -->
- <!-- It will contain 
-  1. Name 
-  2, Current Occupation 
-  3. Few Bio ..
-  4. separater line achived through <hr>
-  Lets use the heading tage and paragraph tag with some bold and italic staments to achive that ...
--->
-<!-- addong image of your porfile .. -->
-<!-- Updating the heading with table -->
-<table cellspacing="10">
-    <tr>
-        <td>
-            <img src="./assets/images/profile.png"    alt="Fitsum Alemu Profile Image" width="200" hight= "200">
-        </td>
-        <td>
-            <h1>Fitsum Alemu</h1>
-            <h3>Lecurer , Addis Ababa institue of Technology</h3>   
-            <p>Hi there , </p>
-            <p>I am Fitsum , i am expert <strong>Web</strong> Developer who has been working on HTML. CSS and Javascript since <em>5 </em></em5>years. I am passionate about working in diffrent types of porgaming languages </p>
-           
-
-        </td>
-    </tr>
-</table> 
+<img src="./assets/images/profile.png"  border="1"  alt="Fitsum Alemu Profile Image">
+<h1>Fitsum Alemu</h1>
+<h3>Lecurer , Addis Ababa institue of Technology</h3>   
+<p>Hi there , </p>
+<p>I am Fitsum , i am expert <strong>Java</strong> Developer who has been working on Java since <em>5 </em></em5>years. I am passionate about working in diffrent types of porgaming langiage </p>
+<div id="clear"></div>
 
 
 <hr>   
