Key Changes : 1. Updating the navigation to be stiky 2. Refelecting the update on the home and contact page

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@
      </ul>
     </nav>
 </header>
-    
+   
+<div id="content1">
 
 <img src="./assets/images/profile.png"  border="1"  alt="Fitsum Alemu Profile Image">
 <h1>Fitsum Alemu</h1>
@@ -63,5 +64,6 @@ Leave Your Comment here ..<br>
 <hr>
 <p align="center">Developed By Fitsum A. &copy;2020</p> 
 <hr>
+</div>
 </body>
 </html>
