--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
      </ul>
     </nav>
 </header>
-    
+   
+<div id="content1">
 
 <img src="./assets/images/profile.png"  border="1"  alt="Fitsum Alemu Profile Image">
 <h1>Fitsum Alemu</h1>
@@ -98,5 +99,6 @@ This is achived by table
 <hr>
 <p align="center">Developed By Fitsum A. &copy;2020</p> 
 <hr>
+</div>
 </body>
 </html>
